# phishai-cli

./: .gitignore  README.md  pyproject.toml
phishai_cli/: __init__.py  __main__.py  output.py  providers.py
phishai_cli/agent/: core.py  tools.py
phishai_cli/commands/: agent_cmd.py  analyze.py  report.py  scan.py  sender.py  url.py
